--- a/Contact.html
+++ b/Contact.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- SEO -->
   <meta name="description" content=" L'objectif de ce site est de présenter le club de triathlon 
   de Saint-Malo qui organise une compétition le 13 Juin 2021">
+  <!-- Bootstrap JavaScript Bundle with Popper -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
   rel="stylesheet" 
   integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
@@ -13,10 +15,79 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" 
   crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+  <!-- MyCSS -->
+  <link rel="stylesheet" href="Style.css">
   <title>Triathlon Saint-Malo</title>
 </head>
-<body>
-  
+<body class="body container-fluid"> 
+    <header >
+        <nav class="navbar navbar-expand-lg navbar-light  bg-light fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="./Index.html">Triatlon Club Saint Malo</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link " aria-current="page" href="./Index.html">Accueil</a>
+                  <a class="nav-link" href="./Event.html">Evenement</a>
+                  <a class="nav-link active" href="./Contact.html">Contact</a>
+                </div>
+              </div>
+            </div>
+          </nav> 
+      </header>
+
+    <div class="Contact container">
+         <div class="divider"></div>
+         <div class="heading">
+             <h3>Contactez-nous</h3>
+         </div>
+             
+        <div class="row">
+            <div class="col-lg-10 col-lg-offset-1">
+                 <form id="contact-form" method="post" action="" role="form">
+                     <div class="row">
+                         <div class="col-md-6">
+                             <label for="firstname">Prénom <span class="blue">*</span></label>
+                             <input id="firstname" type="text" name="firstname" class="form-control" 
+                             placeholder="Votre prénom">
+                             <p class="comments"></p>
+                         </div>
+                         <div class="col-md-6">
+                             <label for="name">Nom <span class="blue">*</span></label>
+                             <input id="name" type="text" name="name" class="form-control" 
+                             placeholder="Votre Nom">
+                             <p class="comments"></p>
+                         </div>
+                         <div class="col-md-6">
+                             <label for="email">Email <span class="blue">*</span></label>
+                             <input id="email" type="text" name="email" class="form-control" 
+                             placeholder="Votre Email">
+                             <p class="comments"></p>
+                         </div>
+                         <div class="col-md-6">
+                             <label for="phone">Téléphone</label>
+                             <input id="phone" type="tel" name="phone" class="form-control" 
+                             placeholder="Votre Téléphone">
+                             <p class="comments"></p>
+                         </div>
+                         <div class="col-md-12">
+                             <label for="message">Message <span class="blue">*</span></label>
+                             <textarea id="message" name="message" class="form-control" 
+                             placeholder="Votre Message" rows="4"></textarea>
+                             <p class="comments"></p>
+                         </div>
+                         <div class="col-md-12">
+                             <p class="blue"><strong>* Ces informations sont requises.</strong></p>
+                         </div>
+                         <div class="col-md-12">
+                             <input type="submit" class="button1" value="Envoyer">
+                         </div>    
+                     </div>
+                 </form>
+             </div>
+        </div>
+      </div>
 </body>
 </html>
