--- a/Event.html
+++ b/Event.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- SEO -->
   <meta name="description" content=" L'objectif de ce site est de présenter le club de triathlon 
   de Saint-Malo qui organise une compétition le 13 Juin 2021">
+  <!-- Bootstrap JavaScript Bundle with Popper -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
   rel="stylesheet" 
   integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
@@ -13,10 +15,68 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" 
   crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+  <!-- MyCSS -->
+  <link rel="stylesheet" href="Style.css">
   <title>Triathlon Saint-Malo</title>
 </head>
-<body>
-  
-</body>
+  <body class="body container-fluid">
+    <header > 
+          <nav class="navbar navbar-expand-lg navbar-light  bg-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./Index.html">Triatlon Club Saint Malo</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link " aria-current="page" href="./Index.html">Accueil</a>
+            <a class="nav-link active" href="./Event.html">Evenement</a>
+            <a class="nav-link" href="./Contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav> 
+    </header>
+       <!--Event presentation-->
+       <div class="container-fluid EventPresentation">
+          <div class="row">
+             <div id="block1" class="col-md-6" style="border:1px solid red">
+               <h1> Evenement </h1>
+                  <p>Descriptif evenement</p>
+             </div>
+             <div id="block1" class="col-md-6" style="border:1px solid black">
+               <h1> Evenement </h1>
+                  <p>Descriptif evenement</p>
+             </div>
+          </div> 
+          
+       </div>
+       <div class="container-fluid FooterContainer pb-0 mb-0 justify-content-center text-light ">
+
+       <footer>
+        <div class="row my-5 justify-content-center py-5">
+            <div class="col-11">
+                <div class="row ">
+                    <div class="col-xl-8 col-md-4 col-sm-4 col-12 my-auto mx-auto a">
+                        <h3 class="text-muted mb-md-0 mb-5 bold-text">Triathlon Club Saint-Malo</h3>
+                    </div>
+                    <div class="col-xl-2 col-md-4 col-sm-4 col-12">
+                        <h6 class="mb-3 mb-lg-4 text-muted bold-text mt-sm-0 mt-5"><b>Adresse</b></h6>
+                        <p class="mb-1">Boulevard de la licorne</p>
+                        <p>35400 Saint-Malo</p>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-xl-8 col-md-4 col-sm-4 col-auto my-md-0 mt-5 order-sm-1 order-3 align-self-end">
+                        <p class="social text-muted mb-0 pb-0 bold-text"> <span class="mx-2"><i class="fa fa-facebook" aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-twitter" aria-hidden="true"></i></span> <span class="mx-2"><i class="fa fa-instagram" aria-hidden="true"></i></span> </p><small class="rights"><span>&#174;</span> TCSM All Rights Reserved.</small>
+                    </div>
+                    <div class="col-xl-2 col-md-4 col-sm-4 col-auto order-1 align-self-end ">
+                        <h6 class="mt-55 mt-2 text-muted bold-text"><b>Président : MARTA Kauffman</b></h6><small> <span><i class="fa fa-envelope" aria-hidden="true"></i></span> martakaufman@example.com</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    </div>
+  </body>
 </html>
