--- a/Event.html
+++ b/Event.html
@@ -37,21 +37,42 @@
       </div>
     </nav> 
     </header>
-       <!--Event presentation-->
-       <div class="container-fluid EventPresentation">
-          <div class="row">
-             <div id="block1" class="col-md-6" style="border:1px solid red">
-               <h1> Evenement </h1>
-                  <p>Descriptif evenement</p>
-             </div>
-             <div id="block1" class="col-md-6" style="border:1px solid black">
-               <h1> Evenement </h1>
-                  <p>Descriptif evenement</p>
-             </div>
-          </div> 
-          
-       </div>
-       <div class="container-fluid FooterContainer pb-0 mb-0 justify-content-center text-light ">
+    <div class="EventTitle container-fluid">
+      <div class="heading">
+          <h5>Triathlon de Saint-Malo : 13 Juin 2021</h5>
+      </div>
+    </div>
+    <div class="EventPresentation container-fluid">
+      <div class="row">
+            <div class="col-md-6">
+                <img src="./Images/Event.jpeg" class="img-fluid">
+            </div>
+                <div class="col-md-6">
+                <p>Les épreuves sont labellisées FFTRI - Mixité - Triathlon durable.</p>
+                <p>Prés de 1 000 triathlètes sont attendus durant la journée.</p>
+                <p>Aprés un parcours natation devant la magnifique plage du Val de Saint-Malo, les triathlètes rouelront de Rothéneuf à Saint-Coulomb pour la partie vélo.
+                  Ensuite les coureurs à pied profiteront d'un aller-retour vers la pointe de la Varde en zone Natura 2000.</p>
+                <p>Le village d'accueil sera positionné sur le site du camping du Nicer, ainsi que les stands des partenaires et une buvette/restauration.</p>
+                </div>
+      </div>
+    </div>
+    <div class="MapRace container-fluid">
+      <div class="row">
+        <h6>Les parcours</h6>
+            <div class="text-center col-sm-6 col-lg-4">
+                <img src="./Images/SwimMap.jpeg" class="RacePicture img-fluid">
+                <p>Natation : 2 boucles avec sortie à l'australienne, sens anti-horaire (contournement des bouées par la droite).</p>
+            </div>
+            <div class="text-center col-sm-6 col-lg-4">
+              <img src="./Images/BikeMap.jpeg" class="RacePicture img-fluid">
+              <p> Vélo : 2 boucles de 21 km entre St Malo et St Coulomb, parcours roulant sans difficulté majeure.</p>
+          </div>
+          <div class="text-center col-sm-6  col-lg-4">
+            <img src="./Images/RunMap.jpeg" class="RacePicture img-fluid">
+            <p>Course à pied 2 boucles de 4.64 km typées trail sans difficulté majeure.</p>
+        </div>
+      </div>
+    </div>
 
         <footer>
           <div class="FooterContainer container-fluid col-md-3">
