Resolution probleme affichage navbar

--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
   <header >
     <nav class="navbar navbar-expand-lg navbar-light  bg-light fixed-top" >
       <div class="container-fluid">
-        <a class="navbar-brand" href="./Index.html">Triathlon Club Saint-Malo</a>
+        <a class="NameSite navbar-brand" href="./Index.html">Triathlon Club Saint-Malo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,15 +37,13 @@
         </div>
       </div>
     </nav>
-    <div class="card bg-dark text-white " >
-      <img src="./Images/OceanMalouin.jpg" class="card-img img-fluid HeaderImage" alt="...">
-      <div class="card-img-overlay HeaderCard">
-        <h5 class="card-title"></h5>
-        <p class="proverbe card-text ">Leve toi avec determination, couche toi avec satisfaction...</p>
-      </div>
-    </div>
   </header>
-  <main>
+    <main>
+      <div class="MainPicture">
+            <img src="./Images/OceanMalouin.jpg" class="card-img img-fluid HeaderImage" alt="...">
+              <div class="proverbe ">Leve toi avec determination, couche toi avec satisfaction...</div>
+      </div>
+
     <!-- Club History-->
     <article class="container ClubHistory"> 
       <div class="card Presentation">
