--- a/Index.html
+++ b/Index.html
@@ -48,10 +48,10 @@
     <article class="container ClubHistory"> 
       <div class="card Presentation">
         <div class="row">
-          <div class="col ">
+          <div class="text-center col-sm-12 col-md-6 col-lg-4 ">
             <img class="img-fluid ClubLogo" src="./Images/LogoCote.png " alt="logo club">
           </div>
-          <div class="col ">
+          <div class="col-sm-12 col-md-6 col-lg-8 ">
             <div class="card-body">
               <h5 class="card-title TitlePresentation">Histoire du club</h5>
                 <p class="card-text">Créé en 1986, le Triathlon Club Saint-Malo est une association bien
@@ -66,10 +66,10 @@
       </div>
     </article>
   </main>
-  <section>
-    <!-- Le Staff-->
+  
+  <!--<section>-->
     <h2 > Le staff</h2>
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="col-sm-12 col-md-6 col-lg-4 carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -77,33 +77,33 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img  src="./Images/Nat.jpg" class="d-block w-100" alt="...">
+          <img  src="./Images/Nat.jpg" class="img-fluid d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            </div>            
+            <h5 class="CoachSports">Natation</h5>
+              <p class="CoachNames"><bold>Joey Tribbiani</bold> né le 15 avril 1963 à Melun, est un entraîneur de natation français. Il est notamment connu pour avoir été l'entraîneur de Flipper.</p>
+            </div>
+        <div class="carousel-item">
+          <img  src="./Images/Bike.jpg" class="img-fluid d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Coach Natation</h5>
-            <p class="CoachNames">Joey Tribbiani</p>
           </div>
+          <h5 class="CoachSports">Vélo</h5>
+          <p class="CoachNames">Chandler Bing, né Lance Edward Gunderson le 18 septembre 1971 à Plano, est un ancien coureur cycliste américain, champion du monde sur route en 1993.</p>
         </div>
         <div class="carousel-item">
-          <img  src="./Images/Bike.jpg" class="d-block w-100" alt="...">
+          <img  src="./Images/Cap.jpg" class="img-fluid d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Coach Vélo</h5>
-            <p class="CoachNames">Chandler Bing</p>
           </div>
-        </div>
-        <div class="carousel-item">
-          <img  src="./Images/Cap.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Coach Course à pied</h5>
-            <p class="CoachNames">Ross Geller</p>
-          </div>
+          <h5 class="CoachSports">Course à pied</h5>
+          <p class="CoachNames">Ross Geller,  né le 19 novembre 1965 à Alès, est un footballeur international puis entraîneur français. Il évolue majoritairement au poste de défenseur du début des années 1980 au début des années 2000.</p>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span id="IconButton" class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span id="IconButton" class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
