--- a/Contact.html
+++ b/Contact.html
@@ -47,7 +47,7 @@
          </div>
         <div class="row">
             <div class="col-lg-12 col-lg-offset-1">
-                 <form id="contact-form" method="post" action="" role="form">
+                 <form id="contact-form" method="post" action="null">
                      <div class="row">
                         <!-- Firstname-->
                          <div class="col-md-6">
