--- a/Event.html
+++ b/Event.html
@@ -49,7 +49,7 @@
       <div class="row">
             <div class="col-md-6">
               <!-- Event Picture-->
-                <img src="./Images/Event.jpeg" class="img-fluid">
+                <img src="./Images/Event.jpeg" class="img-fluid" alt="EventPicture">
             </div>
               <!-- Eveent Description-->
                 <div class="col-md-6">
@@ -67,17 +67,17 @@
         <h6>Les parcours</h6>
             <!-- Map Swim-->
             <div class="text-center col-sm-6 col-lg-4">
-                <img src="./Images/SwimMap.jpeg" class="RacePicture img-fluid">
+                <img src="./Images/SwimMap.jpeg" class="RacePicture img-fluid" alt="MapRace">
                 <p>Natation : 2 boucles avec sortie à l'australienne, sens anti-horaire (contournement des bouées par la droite).</p>
             </div>
             <!-- Map Bike-->
             <div class="text-center col-sm-6 col-lg-4">
-              <img src="./Images/BikeMap.jpeg" class="RacePicture img-fluid">
+              <img src="./Images/BikeMap.jpeg" class="RacePicture img-fluid" alt="MapRace">
               <p> Vélo : 2 boucles de 21 km entre St Malo et St Coulomb, parcours roulant sans difficulté majeure.</p>
           </div>
             <!-- Map Run-->
           <div class="text-center col-sm-6  col-lg-4">
-            <img src="./Images/RunMap.jpeg" class="RacePicture img-fluid">
+            <img src="./Images/RunMap.jpeg" class="RacePicture img-fluid" alt="MapRace">
             <p>Course à pied 2 boucles de 4.64 km typées trail sans difficulté majeure.</p>
         </div>
       </div>
